--- a/game.html
+++ b/game.html
@@ -33,6 +33,7 @@
 				y:mouseY
 			};
 		} 
+
 		function handleMouseClick(evt) {
 			if (showingWinScreen) {
 				player1Score = 0;
@@ -82,7 +83,7 @@
 				paddle2Y -= 6;
 			}
 		}
-
+		//function
 		function moveEverything() {
 			if (showingWinScreen) {
 				return;
