--- a/game.html
+++ b/game.html
@@ -123,7 +123,7 @@
 				ballSpeedY = -ballSpeedY;
 			}
 		}
-
+		//okay
 		function drawNet() {
 			for(var i=0; i <canvas.height; i+=40) {
 				colorRect(canvas.width/2-1,i,2,20,'white');
@@ -131,7 +131,7 @@
 		}
 
 		function drawEverything() {
-			// next line blanks out the screen with black
+			// next line blanks out the screen with black screen
 			colorRect(0,0,canvas.width,canvas.height,'black');
 
 			if (showingWinScreen) {
